--- a/Settings.ini
+++ b/Settings.ini
@@ -1,4 +1,4 @@
-; These is the section containing the settings for the inline calculator script
+; This is the section containing the settings for the inline calculator script
 [InlineCalculator] 
 enable_hotstrings = yes
 trigger_key       = =
