--- a/Settings.ini
+++ b/Settings.ini
@@ -1,3 +1,6 @@
+; This is the section containing the settings that don't pertain to a specific script
+[general] 
+
 ; This is the section containing the settings for the inline calculator script
 [InlineCalculator] 
 enable_hotstrings = yes
