--- a/Settings.ini
+++ b/Settings.ini
@@ -1,6 +1,7 @@
 ; This is the section containing the settings that don't pertain to a specific script
 [general] 
-
+; This is the section containing the settings for the function keys extender script
+[FuncKeysExtender] 
 ; This is the section containing the settings for the inline calculator script
 [InlineCalculator] 
 enable_hotstrings = yes
