--- a/Settings.ini
+++ b/Settings.ini
@@ -3,6 +3,8 @@
 ; This is the section containing the settings for the function keys extender script
 [FuncKeysExtender] 
 ; This is the section containing the settings for the inline calculator script
+[CaseChange] 
+; This is the section containing the settings for the case change script
 [InlineCalculator] 
 enable_hotstrings = yes
 trigger_key = =
