--- a/settings.ini
+++ b/settings.ini
@@ -1,1 +1,5 @@
-[General] 
+;   In the future, I'd like to have the option of defining the behavior of the F13-F24 keys here in the .ini file 
+; This could be done by having each key activate a corresponding .ahk file whose path is provided by the user here in the .ini. 
+[function_keys_extender]
+sActivationKey = "" 
+  
