--- a/settings.ini
+++ b/settings.ini
@@ -1,3 +1,6 @@
+[general] 
+sDriveLetter = "C:\\"
+
 ;   The variables below don't do anything as of right now, but, in the future, they'll store paths to executable files (e.g. exe, ahk, etc) which startup.ahk will execute upon system start up.
 [startup]
 sFilePath1 = ""
